talos-k8s/hive-school/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"hive-school","namespace":"hive"},"spec":{"ingressClassName":"traefik","rules":[{"host":"school.tunaos.org","http":{"paths":[{"backend":{"service":{"name":"hive-console","port":{"number":8080}}},"path":"/console","pathType":"Prefix"},{"backend":{"service":{"name":"hive-discord-realtime-webhook","port":{ [...]

      '
  name: hive-school
  namespace: hive
spec:
  ingressClassName: traefik
  rules:
  - host: school.tunaos.org
    http:
      paths:
      - backend:
          service:
            name: hive-console
            port:
              number: 8080
        path: /console
        pathType: Prefix
      - backend:
          service:
            name: hive-discord-realtime-webhook
            port:
              number: 8080
        path: /api/discord-reports/github
        pathType: Prefix
      - backend:
          service:
            name: hive
            port:
              number: 3002
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - school.tunaos.org
    secretName: school-tunaos-org-tls
